# splatdb

./: .gitignore  AUDIT.md  BENCHMARKS.md  BENCHMARKS_V2.md  CLAURST_PROTOCOL.md  Cargo.toml  LICENSE  PORT_SPEC.md  README.md  REFACTOR_PLAN.md  SECURITY_AUDIT.md  bench_compare.py  bench_python_results.json  benchmark_results.json  build.rs  deny.toml  m2m_client.py
.github/workflows/: ci.yml  release.yml
benches/: m2m_bench.rs  m2m_bench.rs.disabled
benchmarks/: README.md  benchmark_ab_test.py  benchmark_alternatives.py  benchmark_hotpotqa.py  benchmark_reproducible.py  results_glove.json  results_reproducible.json  results_sift.json  run_benchmarks.py
explainer-video/: .gitignore  package-lock.json  render-tail.js  render.js  scenes.html
kernels/: distance.cu  extended_kernels.cu
src/: api_server.rs  auto_scaling.rs  backend_comm.rs  bm25_index.rs  clustering.rs  cuda_search.rs  data_lake.rs  dataset_transformer.rs  embedding_config.rs  embedding_model.rs  encoding.rs  energy.rs  engine.rs  entity_extractor.rs  error.rs  evaluate_embeddings.rs  geometry.rs  gpu_auto_tune.rs  gpu_hierarchical_search.rs  gpu_vector_index.rs  graph_splat.rs  hnsw_index.rs  hrm2_engine.rs  interfaces.rs  lib.rs  lsh_index.rs  main.rs  mapreduce_indexer.rs  mcp_server.rs  memory.rs  optimized_api.rs  quality_reflector.rs  quantization.rs  query_optimizer.rs  query_router.rs  search_supervisor.rs  semantic_memory.rs  spatial.rs  splat_types.rs  splats.rs  (+3 more)
tests/: chaos_test.rs  integration.rs  pentest_security.rs  qa_validation.rs  test_all_presets.py  test_gpu_preset.py
(+51 files in other folders)
