[package]
name = "splatdb"
version = "2.1.0"
edition = "2021"
description = "SplatDB - Gaussian Splat vector search engine"
license = "AGPL-3.0"

[features]
default = []
cuda = ["cudarc"]

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
rayon = "1"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
cudarc = { version = "0.19", features = ["cuda-12040"], optional = true }

tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
ureq = { version = "3", features = ["json"] }
bytemuck = "1"
parking_lot = "0.12"

[dev-dependencies]
approx = "0.5"
